--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,37 @@
 .toolbar{
   background: rgba(0, 0, 0, 1);
-  width: 35%;
-  height: 25%;
+  width: 35vw;
+  height: 25vh;
   border-radius: 24px;
   margin: 1% 0 0 1%;
+  z-index: 10;
 
 }
 .buttonImage{
-  width: 80%;
+  width: auto;
   height:auto;
-
 }
 .toolbarTable{
 
   width: 95%;
-  height: 100%;
+  height: 25vh;
   margin: auto 5% auto 3%;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  z-index: 11;
+
 }
+
+.particlecanvas{
+  height:100%;
+  width:100%;
+  position: fixed;
+  overflow: hidden;
+  z-index: -1;
+}
+
 .toolbar_cell{
   padding-left: auto;
   padding-right: auto;
@@ -41,6 +56,7 @@
   left:0;
   width:100%;
   height:100%;
+  z-index: -99;
 
 }
 #particleText{
@@ -51,9 +67,6 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Opera and Firefox */
-}
-.measured{
-  background-color:
 }
 svg{
   position: fixed;
